feat(sdk): add batch sender, event loss callback, spanLinks, per-step targetSystem, and MDC filter
- Rewrite senderLoop to drain-then-batch model with configurable batchSize, senderThreads, maxBatchWaitMs
- Add EventLossCallback interface with pluggable hook into all event drop sites
- Add withSpanLinks() and addSpanLink() on ProcessLogger for fork-join patterns
- Split targetSystem into one-shot withTargetSystem() and persistent withDefaultTargetSystem()
- Promote MDC servlet filter into starter with auto-configuration and configurable properties
- Bump JaCoCo from 0.8.11 to 0.8.12